--- a/public/html/unicorn-grove.html
+++ b/public/html/unicorn-grove.html
@@ -1,4 +1,4 @@
 <h1>What can Unicorns do for you?</h1>
 <h2 data-ng-repeat="unicorn in IndexVm.unicorns">
-    {{unicorn.magical_power}}
+    <a data-ui-sref="show(unicorn)">{{unicorn.magical_power}}</a>
 </h2>
