--- a/public/html/unicorn-pedestal.html
+++ b/public/html/unicorn-pedestal.html
@@ -57,4 +57,6 @@
 <h2>{{ShowVm.unicorn.magical_power}}</h2>
 <h3>{{ShowVm.unicorn.wings_type}}</h3>
 <h3>{{ShowVm.unicorn.nemesis}}</h3>
-<h3 data-ng-repeat="alicorn in |ShowVm.unicorn.alicorn">{{alicorn.vegetable}}</h3>
+<h3 data-ng-repeat="alicorn in |ShowVm.unicorn.alicorn|">{{alicorn.name}}</h3>
+
+https://github.com/ga-wdi-exercises/ask-the-audience/commit/dac7d9b7cd7946ed29ee562ec28502f353785df9
