adds styling, fixes form

--- a/public/html/unicorn-grove.html
+++ b/public/html/unicorn-grove.html
@@ -1,4 +1,5 @@
-<h1 class="rainbow">What can Unicorns do for you?</h1>
+<h2 class="rainbow">What can Unicorns do for you?</h2>
 <p class="rainbow" data-ng-repeat="unicorn in IndexVm.unicorns">
     <a data-ui-sref="show(unicorn)">{{unicorn.magical_power}}</a>
 </p>
+<unicorn-new-age-birthing-center></unicorn-new-age-birthing-center>
