--- a/public/html/unicorn-new-age-birthing-center.html
+++ b/public/html/unicorn-new-age-birthing-center.html
@@ -1,10 +1,12 @@
-<input type="text" data-ng-model="IndexVm.babyUnicorn.name">
-<input type="text" data-ng-model="IndexVm.babyUnicorn.magical_power">
-<input type="text" data-ng-model="IndexVm.babyUnicorn.wings_type">
-<input type="text" data-ng-model="IndexVm.babyUnicorn.nemesis">
+<h2>UniFORM</h2>
+<input type="text" data-ng-model="IndexVm.babyUnicorn.name" placeholder="Name">
+<input type="text" data-ng-model="IndexVm.babyUnicorn.magical_power" placeholder="Magical Power">
+<input type="text" data-ng-model="IndexVm.babyUnicorn.wings_type" placeholder="Wings">
+<input type="text" data-ng-model="IndexVm.babyUnicorn.nemesis" placeholder="Nemesis">
+<p class="rainbow">Colors:</p>
 <input type="color" data-ng-model="IndexVm.babyUnicorn.color1">
 <input type="color" data-ng-model="IndexVm.babyUnicorn.color2">
 <input type="color" data-ng-model="IndexVm.babyUnicorn.color3">
 <input type="color" data-ng-model="IndexVm.babyUnicorn.color4">
 <input type="color" data-ng-model="IndexVm.babyUnicorn.color5">
-<button data-ng-click="IndexVm.unigenesis()">🦄 ÜniGene§i§ 🦄</button>
+<button class="rainbow" data-ng-click="IndexVm.unigenesis()">🦄 ÜniGene§i§ 🦄</button>
